--- a/src/composer.json
+++ b/src/composer.json
@@ -12,6 +12,7 @@
         "fideloper/proxy": "^4.4",
         "laravel/framework": "^6.20.26",
         "laravel/tinker": "^2.5",
+        "laravelcollective/html": "6.*",
         "league/flysystem-aws-s3-v3": "~1.0"
     },
     "require-dev": {
